2009-09-15  Per Bothner  <per@bothner.com>

	* Type.java (emitConvertFromPrimitive): New method.

2009-09-14  Per Bothner  <per@bothner.com>

	* PrimType.java (coerceFromObject):  Use valueOf methods, if JAVA5.

	* CodeAttr.java (castNeeded): Return false if types match.
	In addition to being an optimization, this makes primitive-array
	types work.

2009-09-12  Per Bothner  <per@bothner.com>

	* PrimType.java (emitCoerceToObject): Use '{Integer,...}.valueOf'
	methods rather than 'new {Integer,...}' if Java5 or later.

2009-08-05  Per Bothner  <per@bothner.com>

	* ClassType.java (isAccessible): Fix buglet.

	* ClassType.java (getMethods): Follow java inheritance spec more
	closely.  We don't need the call context - but whether a method is
	inherited may depend on whether they're in the same package.
	Update calls.
	This fixes Savannah bug #27019 "setLength method of StringBuilder
	not found".
	* ObjectType.java (getMethods): Update, and create @deprecated stub.
	* ArrayType.java (getMethods): Update for new API.

	* Method.java (<init>): New constructor.

2009-07-29  Per Bothner  <per@bothner.com>

	* ClassType.java (getMethods(Filter,int,Vector,String)): Generalize
	Vector argument to List<Method>.
	(getMethods(Filter,int,Method[],String)): Re-implement to use
	above method.
	(countMethods, getMethods(Filter,int)): Likewise.
	* ObjectType.java (getMethod): Likewise generalize Vector->List.

2009-07-15  Per Bothner  <per@bothner.com>

	* CodeAttr.java (noteVarType): Make sure re-sized array is big enough.
	Follow-up to previous fix for Savannah bug #27011
	"ArrayIndexOutOfBoundsException after 20 local variables" - now
	with 42 variables.

2009-07-11  Per Bothner  <per@bothner.com>

	* CodeAttr.java (noteVarType): Make sure fresh array is big enough.
	This fixes Savannah bug #27011 "ArrayIndexOutOfBoundsException after
	20 local variables".

2009-07-03  Per Bothner  <per@bothner.com>

	* CodeAttr.java: Fix thinko when comparing opcodes.